# pyzan

./: .gitignore  README.md  pyproject.toml  vm_state.db
example/: example.pzn  example.zan  main.py
src/pyzan/: db.py  file_handler.py  log.py  op_code.py  parser.py  serialization.py  state_db.py  utils.py  vm.py  vm_id.py
tests/: test_vm.py
